# claude-yes

./: .dockerignore  .gitignore  .lintstagedrc.json  .releaserc.json  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.mini  GLIBC_FIX.md  README-rust.md  README.md  ReadyManager.ts  SKILL.md  TODO.md  agent-yes.config.ts  benchmark.sh  biome.json  bun.test.setup.ts  bunfig.toml  ccx.ts  cli-idle.spec.ts  cli-yes.config.ts  cli.test.ts  cli.ts  createIdleWatcher.spec.ts  createIdleWatcher.ts  docker-compose.yaml  idleWaiter.ts  index.html  index.test.ts  index.ts  package-lock.json  package.json  postbuild.ts  pyproject.toml  removeControlCharacters.ts  runningLock.ts  seed-credentials.sh  test_claude_direct.sh  test_input.sh  (+3 more)
.husky/: pre-commit
docker/: Dockerfile  Dockerfile.mini  SETUP.md
docs/: BINARY_BUILD.md  TODO.md  architecture.md  cli-database.md  clouds.md  codex-session-restore.md  db.md  example-usage.md  index-refactoring-plan.md  naming-consistency.md  running-lock-usage.md  running-lock.md
e2e-tests/: README.md  package.json  run-tests.js  test-config.json  unified-compatibility-test.js  vite-dev-test.js
examples/: README.md  db-usage.ts  docker.sh  gcp.sh
src/: claude_wrapper.rs  idle_watcher.rs  lib.rs  main.rs  ready_manager.rs  terminal_render.rs  utils.rs
tests/: beta-test.sh  flag_file_test.rs  integration_test.rs  mock-agent.js  quick_flag_test.rs  simple_claude_test.rs
ts/: ReadyManager.spec.ts  ReadyManager.ts  SUPPORTED_CLIS.ts  build-binaries.ts  build-binary-local.ts  catcher.spec.ts  catcher.ts  cli-idle.spec.ts  cli.spec.ts  db.ts  (+34 more)
(+30 files in other folders)
